--- a/three-project/index.html
+++ b/three-project/index.html
@@ -2,26 +2,23 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="/css/main.css">
+		<link rel="stylesheet" href="css/main.css">
 		<title>Modular Arithmetic</title>
 	</head>
 	<body>
-    <div class="row">
-      <div class="column" id="l" style="background-color:#aaaaaa">
-				<p>bitch</p>
-				<!-- <form action="/action_page.php" method="get"> -->
-				<form id="nodesForm">
-  				<label for="nodes">Number of nodes (between 2 and 50):</label>
-  				<input type="range" id="nodes" name="nodes" min="2" max="50">
-  				<input type="submit" value="Submit">
-				</form>
-      </div>
-      <div class="column" id="r">
-				<script type="module" src="ancilliary.js"></script>
-        <!-- <script src="js/three.js"></script>
-        <script src="main.js"></script> -->
-				<p>cry</p>
-      </div>
-    </div>
-  </body>
+		<div class="left">
+			<form>
+				<label for="nSlider">Select a value for n (between 2 and 50):</label>
+				<input type="range" id="nSlider" name="nSlider" min="2" max="50">
+				<input type="submit" name="button" id="button" value="Submit">
+			</form>
+		</div>
+		<div data-diagram="box" class="right"></div>
+		<script  type="importmap">{
+			"imports": {
+				"three": "https://threejs.org/build/three.module.js",
+				"three/addons/": "https://threejs.org/examples/jsm/"
+			}
+		}</script><!-- Remove this when import maps will be widely supported -->
+	</body>
 </html>
