--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
             }
         }</script><!-- Remove this when import maps will be widely supported -->
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-        <script type="module" src="./src/main.js"></script>
+        <script type="module" src="./src/main.js" id="js"></script>
     </head>
     <body>
         <div class="grid-container">
             <div class="user-inputs">
               <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 2 and 50):</label><br>
-                  <input type="range" id="nSlider" name="nSlider" min="2" max="50">
-                  <input type="submit" value="Submit" id="sBtn" name="sBtn">
+                  <input type="range" id="nSlider" name="nSlider" min="2" max="50" onchange="js.updateCircle(this.value)">
+                  <!-- <input type="submit" value="Submit" id="sBtn" name="sBtn"> -->
               </form>
             </div>
             <div class="scene-container" id="scene-container">
