--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <div class="user-inputs">
               <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 50):</label><br>
-                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="50" value="5" oninput="rangevalue.value=this.value">
+                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="50" value="12" > <!--oninput="rangevalue.value=this.value"-->
+                  <br><input type="button" value=">" id="nxtBtn" name="nxtBtn">
               </form>
             </div>
             <div class="scene-container" id="scene-container">
