--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 50):</label><br>
                   <br><input type="range" id="nSlider" name="nSlider" min="3" max="50" value="12" > <!--oninput="rangevalue.value=this.value"-->
+                  <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
                   <br><input type="button" value=">" id="nxtBtn" name="nxtBtn">
               </form>
             </div>
