--- a/index.html
+++ b/index.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-        <title>Split Interface</title>
-        <link rel="stylesheet" href="./styles/main.css">
-        <script  type="importmap">{
-            "imports": {
-                "three": "https://threejs.org/build/three.module.js",
-                "three/addons/": "https://threejs.org/examples/jsm/"
-            }
-        }</script><!-- Remove this when import maps will be widely supported -->
-        <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
-        <script type="module" src="./src/main.js"></script>
-    </head>
-    <body>
-        <div class="grid-container">
-            <div class="user-inputs">
-              <form id="inputs">
-                  <label for="nSlider">Please select a number of nodes (between 3 and 50):</label><br>
-                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="50" value="12" > <!--oninput="rangevalue.value=this.value"-->
-                  <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
-                  <br><input type="button" value=">" id="nxtBtn" name="nxtBtn">
-              </form>
-            </div>
-            <div class="scene-container" id="scene-container">
-
-            </div>
-        </div>
-    </body>
-    </html>
+  <head>
+    <meta charset="utf-8">
+    <title>Homepage</title>
+  </head>
+  <body>
+    <p style="font-size: 20px; color:#1F9AFE;">
+        <a href="addModArithmetic.html">Additive Modular Arithmetic</a>
+    </p>
+  </body>
+</html>
