refactoring variable calls

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Homepage</title>
-    <script type="module" src="./src/test2.js"></script>
-    <script type="module" src="./src/test1.js"></script>
+    <!-- <script type="module" src="./src/test2.js"></script>
+    <script type="module" src="./src/test1.js"></script> -->
   </head>
   <body>
     <p style="font-size: 20px; color:#1F9AFE;">
         <a href="addModArithmetic.html">Additive Modular Arithmetic</a>
     </p>
-    <div class="testing" id="testing"></div>
+    <!-- <div class="testing" id="testing"></div> -->
   </body>
 </html>
