--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -13,6 +13,7 @@
         }</script><!-- Remove this when import maps will be widely supported -->
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
+        <script type="module" src="./src/additive.js"></script>
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
