--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -8,9 +8,12 @@
         <script  type="importmap">{
             "imports": {
                 "three": "https://threejs.org/build/three.module.js",
-                "three/addons/": "https://threejs.org/examples/jsm/"
+                "THREE": "https://threejs.org/build/three.module.js",
+                "three/addons/": "https://threejs.org/examples/jsm/",
+                "fontloader": "https://threejs.org/examples/jsm/loaders/FontLoader.js"
             }
         }</script><!-- Remove this when import maps will be widely supported -->
+        <script type="module" src="https://threejs.org/build/three.module.js"></script>
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
         <script type="module" src="./src/additive.js"></script>
