button appearance changed

--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -30,7 +30,7 @@
                   <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
                   <br><h6 id="iMax"></h6>
                   <h6 id="i"></h6>
-                  <br><input type="button" value=">" id="nxtBtn" name="nxtBtn">
+                  <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
               </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
