leaving fonts for now, moving to other tasks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <p style="font-size: 20px; color:#1F9AFE;">
-        <a href="addModArithmetic.html">Additive Modular Arithmetic</a>
+      <a href="addModArithmetic.html">Additive Modular Arithmetic</a>
+      <a href="tester.html">Testing page</a>
     </p>
     <!-- <div class="testing" id="testing"></div> -->
   </body>
