refactoring to follow discoverthreejs.org modularisation

--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -16,7 +16,7 @@
         <script type="module" src="https://threejs.org/build/three.module.js"></script>
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
-        <script type="module" src="./src/additive.js"></script>
+        <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
@@ -31,7 +31,8 @@
                   <br><h6 id="iMax"></h6>
                   <h6 id="i"></h6>
                   <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
-              </form>
+                  <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
                 <br><p id="mInverse"></p>
