--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -23,13 +23,18 @@
         <div class="grid-container">
             <div class="user-inputs">
               <form id="inputs">
-                  <label for="nSlider">Please select a number of nodes (between 3 and 50):</label><br>
+                  <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
                   <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="13" > 
                   <h6 id="n"></h6>
+
                   <br><label for="iSlider">Please select a step size (between 1 and n-1):</label>
                   <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
                   <br><h6 id="iMax"></h6>
                   <h6 id="i"></h6>
+
+                  <br><label for="speedSlider">Please select an auto-play speed:</label>
+                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3">
+
                   <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
                   <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
                 </form>
