reset button added

--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -37,6 +37,7 @@
 
                   <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
                   <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                  <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
                 </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
