--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -32,8 +32,8 @@
                   <br><h6 id="iMax"></h6>
                   <h6 id="i"></h6>
 
-                  <br><label for="speedSlider">Please select an auto-play speed:</label>
-                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3">
+                  <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
+                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
 
                   <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
                   <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
