--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-        <title>Additive Modular Arithmetic</title>
+        <title>Additive Structure of Z_n</title>
         <link rel="stylesheet" href="./styles/main.css">
         <script  type="importmap">{
             "imports": {
