--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p style="font-size: 20px; color:#1F9AFE;">
-      <a href="addModArithmetic.html">Additive Modular Arithmetic</a>
+      <a href="addModArithmetic.html">Additive Structure of Z_n</a>
       <br>
       <a href="tester.html">Testing page</a>
     </p>
