last prep. demo ready.

--- a/addModArithmetic.html
+++ b/addModArithmetic.html
@@ -35,6 +35,8 @@
                   <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
                   <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
 
+                  <br><p id="sums"></p>
+
                   <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
                   <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
                   <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
