setting up files for all screens

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <p style="font-size: 20px; color:#1F9AFE;">
-      <a href="addModArithmetic.html">Additive Structure of Z_n</a>
+      <a href="screen1.html">Additive Structure of Z_n</a>
+      <br>
+      <a href="screen2.html">Additive Orders of Elements, Multiplicative Elements, phi(n)</a>
+      <br>
+      <a href="screen3.html">Multiplicative Structure of Z_n^*</a>
+      <br>
+      <a href="screen4.html">Multiplicative Orders of Elements, Primitive Roots for Certain n</a>
+      <br>
+      <a href="screen5.html">Isomorphism between Z_(phi(n)) and Z_n^*</a>
+      <br>
+      <a href="screen6.html">Chinese Remainder Theorem for n=pq</a>
+      <br>
+      <a href="screen7.html">RSA</a>
       <br>
       <a href="tester.html">Testing page</a>
     </p>
