--- a/screen1.html
+++ b/screen1.html
@@ -20,6 +20,9 @@
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
+      <a href="index.html">
+        <button class="button-8" role="button" href="index.html">Home</button>
+      </a>
         <div class="grid-container">
             <div class="user-inputs">
               <form id="inputs">
