--- a/tester.html
+++ b/tester.html
@@ -20,5 +20,8 @@
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
+        <a href="index.html">
+            <button class="button-8" role="button" href="index.html">Home</button>
+        </a>
     </body>
     </html>
