--- a/screen1.html
+++ b/screen1.html
@@ -39,14 +39,14 @@
                   <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
 
                   <br><p id="sums"></p>
+                  <br><p id="mInverse"></p>
 
-                  <br><input type="button" class="Render" value="Render" id="nxtBtn" name="nxtBtn">
+                  <br><input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
                   <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
                   <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
                 </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
-                <br><p id="mInverse"></p>
                 <br><p id="stepCount"></p>
               </div>
             </div>
