--- a/tester.html
+++ b/tester.html
@@ -20,8 +20,19 @@
         <script type="module" src="./src/main.js"></script>
     </head>
     <body>
-        <a href="index.html">
-            <button class="button-8" role="button" href="index.html">Home</button>
-        </a>
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="screen1.html">Screen 1</a></li>
+                    <li><a href="screen2.html">Screen 2</a></li>
+                    <li><a href="screen3.html">Screen 3</a></li>
+                    <li><a href="screen4.html">Screen 4</a></li>
+                    <li><a href="screen5.html">Screen 5</a></li>
+                    <li><a href="screen6.html">Screen 6</a></li>
+                    <li><a href="screen7.html">Screen 7</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
     </html>
