starting interactivity testing

--- a/screen1.html
+++ b/screen1.html
@@ -61,9 +61,7 @@
                 <br><p id="stepCount"></p>
               </div>
             </div>
-            <div class="scene-container" id="scene-container">
-
-            </div>
+            <div class="scene-container" id="scene-container"></div>
         </div>
     </body>
     </html>
