--- a/screen2.html
+++ b/screen2.html
@@ -17,7 +17,7 @@
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
         <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
-        <script type="module" src="./src/main.js"></script>
+        <script type="module" src="./src/screens/screen2.js"></script>
     </head>
     <body>
         <header>
@@ -34,6 +34,29 @@
                 </ul>
             </nav>
         </header>
-        <h1>Screen 2</h1>
+        <div class="grid-container">
+            <div class="user-inputs">
+              <form id="inputs">
+                  <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
+                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
+                  <h6 id="n"></h6>
+
+                  <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
+                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
+
+                  <br><p id="sums"></p>
+                  <br><p id="mInverse"></p>
+
+                  <br><input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
+                  <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                  <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
+                </form>
+              <div class="outputs" id="outputs">
+                <p id="counterLabel"></p>
+                <br><p id="stepCount"></p>
+              </div>
+            </div>
+            <div class="scene-container" id="scene-container"></div>
+        </div>
     </body>
     </html>
