--- a/screen2.html
+++ b/screen2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-        <title>Testing page</title>
+        <title>Additive Orders of Elements, Multiplicative Elements, phi(n)</title>
         <link rel="stylesheet" href="./styles/main.css">
         <script  type="importmap">{
             "imports": {
