--- a/tester.html
+++ b/tester.html
@@ -17,7 +17,7 @@
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
         <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
-        <script type="module" src="./src/test.js"></script>
+        <script type="module" src="./src/screens/test.js"></script>
     </head>
     <body>
         <header>
