bits n bobs on screen 1

--- a/screen1.html
+++ b/screen1.html
@@ -59,6 +59,7 @@
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
                 <br><p id="stepCount"></p>
+                <br><p id="gcd"></p>
               </div>
             </div>
             <div class="scene-container" id="scene-container"></div>
