screen titles added

--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Homepage</title>
+    <link rel="stylesheet" href="./styles/main.css">
     <!-- <script type="module" src="./src/test2.js"></script>
     <script type="module" src="./src/test1.js"></script> -->
   </head>
   <body>
-    <p style="font-size: 20px; color:#1F9AFE;">
-      <a href="screen1.html">Additive Structure of Z_n</a>
-      <br>
-      <a href="screen2.html">Additive Orders of Elements, Multiplicative Elements, phi(n)</a>
-      <br>
-      <a href="screen3.html">Multiplicative Structure of Z_n^*</a>
-      <br>
-      <a href="screen4.html">Multiplicative Orders of Elements, Primitive Roots for Certain n</a>
-      <br>
-      <a href="screen5.html">Isomorphism between Z_(phi(n)) and Z_n^*</a>
-      <br>
-      <a href="screen6.html">Chinese Remainder Theorem for n=pq</a>
-      <br>
-      <a href="screen7.html">RSA</a>
-      <br>
-      <a href="tester.html">Testing page</a>
-    </p>
-    <!-- <div class="testing" id="testing"></div> -->
+    <header>
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html" style="color:red">Home</a></li>
+          <li><a href="screen1.html">Screen 1</a></li>
+          <li><a href="screen2.html">Screen 2</a></li>
+          <li><a href="screen3.html">Screen 3</a></li>
+          <li><a href="screen4.html">Screen 4</a></li>
+          <li><a href="screen5.html">Screen 5</a></li>
+          <li><a href="screen6.html">Screen 6</a></li>
+          <li><a href="screen7.html">Screen 7</a></li>
+        </ul>
+      </nav>
+  </header>
+  <div class="grid-container">
+          <div class="user-inputs">
+          </div>
+          <div class="scene-container" id="scene-container"></div>
+  </div>
+  <!-- <div class="testing" id="testing"></div> -->
   </body>
 </html>
