--- a/screen5.html
+++ b/screen5.html
@@ -28,12 +28,12 @@
                     <li><a href="screen2.html">Screen 2</a></li>
                     <li><a href="screen3.html">Screen 3</a></li>
                     <li><a href="screen4.html">Screen 4</a></li>
-                    <li><a href="screen5.html">Screen 5</a></li>
+                    <li><a href="screen5.html" style="color:red">Screen 5</a></li>
                     <li><a href="screen6.html">Screen 6</a></li>
                     <li><a href="screen7.html">Screen 7</a></li>
                 </ul>
             </nav>
         </header>
-        <h1>Screen 5</h1>
+        <h1>Isomorphism between Z_(phi(n)) and Z_n^*</h1>
     </body>
     </html>
