--- a/screen7.html
+++ b/screen7.html
@@ -30,10 +30,10 @@
                     <li><a href="screen4.html">Screen 4</a></li>
                     <li><a href="screen5.html">Screen 5</a></li>
                     <li><a href="screen6.html">Screen 6</a></li>
-                    <li><a href="screen7.html">Screen 7</a></li>
+                    <li><a href="screen7.html" style="color:red">Screen 7</a></li>
                 </ul>
             </nav>
         </header>
-        <h1>Screen 7</h1>
+        <h1>RSA</h1>
     </body>
     </html>
