--- a/screen1.html
+++ b/screen1.html
@@ -24,7 +24,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="screen1.html">Screen 1</a></li>
+                <li><a href="screen1.html" style="color:red">Screen 1</a></li>
                 <li><a href="screen2.html">Screen 2</a></li>
                 <li><a href="screen3.html">Screen 3</a></li>
                 <li><a href="screen4.html">Screen 4</a></li>
@@ -36,30 +36,31 @@
     </header>
     <div class="grid-container">
             <div class="user-inputs">
+              <h3>Additive Structure of Z_n</h3>
               <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
-                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
+                  <input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
                   <h6 id="n"></h6>
 
-                  <br><label for="iSlider">Please select a step size (between 1 and n-1):</label>
-                  <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
-                  <br><h6 id="iMax"></h6>
+                  <label for="iSlider">Please select a step size (between 1 and n-1):</label>
+                  <input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
+                  <h6 id="iMax"></h6>
                   <h6 id="i"></h6>
 
                   <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
                   <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
 
-                  <br><p id="sums"></p>
-                  <br><p id="mInverse"></p>
+                  <p id="sums"></p>
+                  <p id="mInverse"></p>
 
-                  <br><input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
-                  <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
-                  <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
+                  <input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
+                  <input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                  <input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
                 </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
-                <br><p id="stepCount"></p>
-                <br><p id="gcd"></p>
+                <p id="stepCount"></p>
+                <p id="gcd"></p>
               </div>
             </div>
             <div class="scene-container" id="scene-container"></div>
