--- a/screen2.html
+++ b/screen2.html
@@ -25,7 +25,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="screen1.html">Screen 1</a></li>
-                    <li><a href="screen2.html">Screen 2</a></li>
+                    <li><a href="screen2.html" style="color:red">Screen 2</a></li>
                     <li><a href="screen3.html">Screen 3</a></li>
                     <li><a href="screen4.html">Screen 4</a></li>
                     <li><a href="screen5.html">Screen 5</a></li>
@@ -36,7 +36,8 @@
         </header>
         <div class="grid-container">
             <div class="user-inputs">
-              <form id="inputs">
+                <h5>Additive Orders of Elements, Multiplicative Elements, phi(n)</h5>
+                <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
                   <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
                   <h6 id="n"></h6>
