--- a/screen4.html
+++ b/screen4.html
@@ -27,13 +27,13 @@
                     <li><a href="screen1.html">Screen 1</a></li>
                     <li><a href="screen2.html">Screen 2</a></li>
                     <li><a href="screen3.html">Screen 3</a></li>
-                    <li><a href="screen4.html">Screen 4</a></li>
+                    <li><a href="screen4.html" style="color:red">Screen 4</a></li>
                     <li><a href="screen5.html">Screen 5</a></li>
                     <li><a href="screen6.html">Screen 6</a></li>
                     <li><a href="screen7.html">Screen 7</a></li>
                 </ul>
             </nav>
         </header>
-        <h1>Screen 4</h1>
+        <h1>Multiplicative Orders of Elements, Primitive Roots for Certain n</h1>
     </body>
     </html>
