--- a/screen6.html
+++ b/screen6.html
@@ -29,11 +29,11 @@
                     <li><a href="screen3.html">Screen 3</a></li>
                     <li><a href="screen4.html">Screen 4</a></li>
                     <li><a href="screen5.html">Screen 5</a></li>
-                    <li><a href="screen6.html">Screen 6</a></li>
+                    <li><a href="screen6.html" style="color:red">Screen 6</a></li>
                     <li><a href="screen7.html">Screen 7</a></li>
                 </ul>
             </nav>
         </header>
-        <h1>Screen 6</h1>
+        <h1>Chinese Remainder Theorem for n=pq</h1>
     </body>
     </html>
