--- a/screen3.html
+++ b/screen3.html
@@ -38,28 +38,28 @@
             <div class="user-inputs">
                 <h3>Multiplicative Structure of Z_n^*</h3>
                 <form id="inputs">
-                  <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
-                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
+                  <label for="nSlider">Please select a number of nodes (between 3 and 100):</label>
+                  <br><input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99"> 
                   <h6 id="n"></h6>
 
                   <br><label for="iSlider">Please select a step size (between 1 and n-1):</label>
                   <br><input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
-                  <br><h6 id="iMax"></h6>
+                  <h6 id="iMax"></h6>
                   <h6 id="i"></h6>
 
-                  <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
-                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
+                  <!-- <label for="speedSlider">Please select an auto-play speed:</label>
+                  <input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
 
-                  <br><p id="sums"></p>
-                  <br><p id="mInverse"></p>
+                  <p id="sums"></p>
+                  <p id="mInverse"></p>
 
-                  <br><input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
-                  <br><input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
-                  <br><input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
+                  <input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
+                  <input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                  <input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
                 </form>
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
-                <br><p id="stepCount"></p>
+                <p id="stepCount"></p>
               </div>
             </div>
             <div class="scene-container" id="scene-container"></div>
