--- a/screen1.html
+++ b/screen1.html
@@ -18,6 +18,19 @@
         <!-- <script src="./src/additive.js"></script> -->
         <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
         <script type="module" src="./src/screens/screen1.js"></script>
+        <script>
+          MathJax = {
+            tex: {
+              inlineMath: [['$', '$'], ['\\(', '\\)']]
+            },
+            svg: {
+              fontCache: 'global'
+            }
+          };
+        </script>
+        <script type="text/javascript" id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+        </script>    
     </head>
     <body>
       <header>
@@ -36,7 +49,7 @@
     </header>
     <div class="grid-container">
             <div class="user-inputs">
-              <h3>Additive Structure of Z_n</h3>
+              <h3>Additive Structure of $Z_n$</h3>
               <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
                   <input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" > 
