--- a/screen2.html
+++ b/screen2.html
@@ -18,7 +18,20 @@
         <!-- <script src="./src/additive.js"></script> -->
         <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
         <script type="module" src="./src/screens/screen2.js"></script>
-    </head>
+        <script>
+            MathJax = {
+              tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+              },
+              svg: {
+                fontCache: 'global'
+              }
+            };
+          </script>
+          <script type="text/javascript" id="MathJax-script" async
+            src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+          </script>    
+      </head>
     <body>
         <header>
             <nav class="navbar">
@@ -36,7 +49,7 @@
         </header>
         <div class="grid-container">
             <div class="user-inputs">
-                <h5>Additive Orders of Elements, Multiplicative Elements, phi(n)</h5>
+                <h5>Additive Orders of Elements, Multiplicative Elements, $\phi ( n )$</h5>
                 <form id="inputs">
                   <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
                   <input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99"><br>
