misc improvements - inc screen 2 ring flip

--- a/screen1.html
+++ b/screen1.html
@@ -59,10 +59,10 @@
                   <input type="range" id="iSlider" name="iSlider" min="1" max=nSlider.value value="3">
                   <h6 id="iMax"></h6>
                   <h6 id="i"></h6>
-
-                  <!-- <br><label for="speedSlider">Please select an auto-play speed:</label>
-                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
-
+                <!-- COMMENT OUT BEGIN HERE
+                  <br><label for="speedSlider">Please select an auto-play speed:</label>
+                  <br><input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3">
+                COMMENT OUT END HERE -->
                   <p id="sums"></p>
                   <p id="mInverse"></p>
 
@@ -74,9 +74,65 @@
                 <p id="counterLabel"></p>
                 <p id="stepCount"></p>
                 <p id="gcd"></p>
+                <p id="eqn"></p>
+                <p id="totient"></p>
               </div>
             </div>
             <div class="scene-container" id="scene-container"></div>
         </div>
-    </body>
+        <!-- <section class="u-align-center u-clearfix u-section-1" id="sec-3d21">
+          <h3>Additive Structure of $Z_n$</h3>
+          <div class="u-clearfix u-gutter-0 u-layout-wrap u-layout-wrap-1">
+            <div class="u-layout" style="">
+              <div class="u-layout-row" style="">
+                <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-20 u-size-xs-60 u-layout-cell-1" src="">
+                  <div class="u-container-layout u-container-layout-1" src="">
+                    <div class="u-form u-form-1">
+                      <form class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" id="inputs" name="form" style="padding: 10px;">
+                        <div class="u-form-group u-form-number u-form-number-layout-range u-form-group-1">
+                          <label for="range-f452" class="u-label">Please select a number of nodes (3-100):</label>
+                          <div class="u-input-row" data-value="3">
+                            <input value="3" min="3" max="100" step="1" type="range" id="nSlider" name="nSlider" class="u-input u-range">
+                          </div>
+                        </div>
+                        <div class="u-form-group u-form-number u-form-number-layout-range u-form-group-2">
+                          <label for="range-eace" class="u-label u-label-2">Please select a step size (up to n-1):</label>
+                          <div class="u-input-row" data-value="1">
+                            <input value="1" min="1" max=nSlider.value step="1" type="range" id="iSlider" name="iSlider" class="u-input u-range">
+                          </div>
+                        </div>
+                        <div class="u-align-left u-form-group u-form-submit">
+                          COMMENT OUT<a href="#" class="u-active-none u-border-2 u-border-active-palette-2-dark-1 u-border-hover-palette-2-base u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-btn-submit u-button-style u-hover-none u-none u-text-hover-palette-2-base u-text-palette-1-base u-btn-1">Submit</a>
+                          COMMENT OUT<input type="submit" value="submit" class="u-form-control-hidden">
+                          <input type="button" class="u-form-control-hidden" value="Step" id="nxtBtn" name="nxtBtn">
+                          <input type="button" class="u-form-control-hidden" value="Play" id="playBtn" name="playBtn">
+                          <input type="button" class="u-form-control-hidden" value="Reset" id="Reset" name="Reset">  
+                        </div>
+                      </form>
+                    </div>
+                    <div class="u-clearfix u-group-elements u-group-elements-1">
+                      <h6 class="u-text u-text-1" id="sums">Sample Headline</h6>
+                      <h6 class="u-text u-text-2" id="mInverse">Sample Headline</h6>
+                      <h6 class="u-text u-text-3" id="counterLabel">Sample Headline</h6>
+                      <h6 class="u-text u-text-4" id="stepCount">Sample Headline</h6>
+                      <h6 class="u-text u-text-4" id="gcd"></h6>
+                      <h6 class="u-text u-text-4" id="eqn"></h6>
+                      <h6 class="u-text u-text-4" id="totient"></h6>
+                      <h6 class="u-text u-text-4" id="n"></h6>
+                      <h6 class="u-text u-text-4" id="i"></h6>
+                      <h6 class="u-text u-text-4" id="iMax"></h6>
+
+                    </div>
+                  </div>
+                </div>
+                <div class="u-align-left u-container-style u-layout-cell u-palette-1-base u-right-cell u-size-40 u-size-xs-60 u-layout-cell-2">
+                  <div class="u-container-layout u-valign-bottom u-container-layout-2" id="scene-container">
+                    COMMENT OUT<img class="u-expanded-width u-image u-image-default u-image-1" src="https://assets.nicepagecdn.com/96ca9a8d/4402001/images/3ad5bcb397d7c5a1328866b5cf951fd91d5be85fe344bf58b1dfbb073af2ce0430c1404c79e9a5064697dd29481bfcc70a709e39c253ae3da9cfaf_1280.jpg" alt="" data-image-width="1280" data-image-height="853">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>    -->
+      </body> 
     </html>
