--- a/screen5.html
+++ b/screen5.html
@@ -47,6 +47,6 @@
                 </ul>
             </nav>
         </header>
-        <h1>Isomorphism between $Z_{\phi(n)}$ and $Z_n^*$</h1>
+        <h1>Isomorphism between $Z_{\phi(n)}$ and $Z_n^\times$</h1>
     </body>
     </html>
