screen 2 reporting labels

--- a/screen2.html
+++ b/screen2.html
@@ -68,6 +68,8 @@
               <div class="outputs" id="outputs">
                 <p id="counterLabel"></p>
                 <p id="stepCount"></p>
+                <p id="totient"></p>
+                <p id="eqn"></p>
               </div>
             </div>
             <div class="scene-container" id="scene-container"></div>
