--- a/screen4.html
+++ b/screen4.html
@@ -17,7 +17,7 @@
         <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
         <!-- <script src="./src/additive.js"></script> -->
         <!-- <script type="module" src="./src/screens/addmod.js"></script> -->
-        <script type="module" src="./src/main.js"></script>
+        <script type="module" src="./src/screens/screen4.js"></script>
         <script>
             MathJax = {
               tex: {
@@ -47,6 +47,32 @@
                 </ul>
             </nav>
         </header>
-        <h1>Multiplicative Orders of Elements, Primitive Roots for Certain $n$</h1>
+        <div class="grid-container">
+          <div class="user-inputs">
+              <h5>Multiplicative Orders of Elements, Primitive Roots for Certain $n$</h5>
+              <form id="inputs">
+                <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
+                <input type="range" id="nSlider" name="nSlider" min="3" max="100" value="99"><br>
+                <h6 id="n"></h6>
+
+                <!-- <label for="speedSlider">Please select an auto-play speed:</label>
+                <input type="range" id="speedSlider" name="speedSlider" min="1" max=15 value="3"> -->
+
+                <p id="sums"></p>
+                <p id="mInverse"></p>
+
+                <input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
+                <input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
+                <input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
+              </form>
+            <div class="outputs" id="outputs">
+              <p id="counterLabel"></p>
+              <p id="stepCount"></p>
+              <p id="totient"></p>
+              <p id="eqn"></p>
+            </div>
+          </div>
+          <div class="scene-container" id="scene-container"></div>
+      </div>
     </body>
     </html>
