--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
       <p class="intro-content">Each screen is designed to build directly upon what you have seen in the previous one.
         The visualisations you will see depict the following concepts:</p>
       <ul>
-        <li class="intro-content"><span style="font-weight: bold;">Screen 1: </span>Modular arithmetic under addition,
-          generators, </li>
-      </ul>
+        <li class="intro-content"><span style="font-weight: bold;">Screen 1: </span>
+          Modular arithmetic under addition, generators, 
+        </li>
+        <li class="intro-content"><span style="font-weight: bold;">Screen 2: </span>
+        </li>
+        <li class="intro-content"><span style="font-weight: bold;">Screen 3: </span>
+        </li>
+        <li class="intro-content"><span style="font-weight: bold;">Screen 4: </span>
+        </li>
+          </ul>
     </div>
   </div>
   <!-- <div class="testing" id="testing"></div> -->
