--- a/screen4.html
+++ b/screen4.html
@@ -65,6 +65,7 @@
               <p id="stepCount"></p>
               <p id="gcd"></p>
               <p id="eqn"></p>
+              <p id="order"></p>
               <p id="totient"></p>			
             </div>
           </div>
