--- a/screen3.html
+++ b/screen3.html
@@ -68,6 +68,7 @@
               <p id="stepCount"></p>
               <p id="gcd"></p>
               <p id="eqn"></p>
+              <p id="order"></p>
               <p id="totient"></p>			
             </div>
           </div>
