maths typesetting in headers

--- a/screen3.html
+++ b/screen3.html
@@ -50,7 +50,7 @@
         <div class="grid-container">
           <div class="column">
             <div class="user-inputs">
-              <h3>Multiplicative Structure of $\mathbb{Z}_n^*$</h3>
+              <h3>Multiplicative Structure of $\mathbb{Z}_n^\times$</h3>
               <form id="inputs">
                 <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
                 <input class="slider-range" type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" >
