--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         Take your time progressing through each screen and play around with numerous combinations
         of values for the variables you are presented with by changing the slider positions.
       </p>
-      <ul style="list-style-type: none;">
+      <ul style="list-style-type: none; margin: -15px;">
         <li><p class="intro-content"><span><input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
         </span>This button will show incremental progress through the whole animation with each click. This is to 
         give you the time to see the changes between each step.</p></li>
