screen 2 nearly done

--- a/screen2.html
+++ b/screen2.html
@@ -79,8 +79,8 @@
             <div class="user-inputs">
               <h5>Additive Orders of Elements, Multiplicative Elements, $\phi ( n )$</h5>
               <form id="inputs">
-                <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
-                <input class="slider-range" type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" >
+                <label for="nSlider">Select number of nodes:</label><br>
+                <input class="slider-range" type="range" id="nSlider" name="nSlider" min="3" max="100" value="50" >
                 <h6 id="n"></h6>
                 <input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
                 <input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
@@ -91,9 +91,9 @@
               <p id="counterLabel"></p>
               <p id="stepCount"></p>
               <p id="gcd"></p>
-              <p id="eqn"></p>
               <p id="order"></p>
-              <p id="totient"></p>			
+              <p id="totient"></p>	
+              <p id="eqn"></p>		
             </div>
           </div>
           <div class="column">
