--- a/screen4.html
+++ b/screen4.html
@@ -53,8 +53,9 @@
               <h5>Multiplicative Orders of Elements, Primitive Roots for Certain $n$</h5>
               <form id="inputs">
                 <label for="nSlider">Please select a number of nodes (between 3 and 100):</label><br>
-                <input class="slider-range" type="range" id="nSlider" name="nSlider" min="3" max="100" value="99" >
+                <input class="slider-range" type="range" id="nSlider" name="nSlider" min="3" max="100" value="50" >
                 <h6 id="n"></h6>
+                <h6 id="phi"></h6>
                 <input type="button" class="Render" value="Step" id="nxtBtn" name="nxtBtn">
                 <input type="button" class="Play" value="Play" id="playBtn" name="playBtn">
                 <input type="button" class="Reset" value="Reset" id="Reset" name="Reset">
