remove 5-7 from nav bar

--- a/screen3.html
+++ b/screen3.html
@@ -41,9 +41,9 @@
                     <li><a href="screen2.html">Screen 2</a></li>
                     <li><a href="screen3.html" style="color:red">Screen 3</a></li>
                     <li><a href="screen4.html">Screen 4</a></li>
-                    <li><a href="screen5.html">Screen 5</a></li>
+                    <!-- <li><a href="screen5.html">Screen 5</a></li>
                     <li><a href="screen6.html">Screen 6</a></li>
-                    <li><a href="screen7.html">Screen 7</a></li>
+                    <li><a href="screen7.html">Screen 7</a></li> -->
                 </ul>
             </nav>
         </header>
